Some changes in BitIStream class

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,5 +2,5 @@ CC=g++
 CFLAGS=-Wall
 
 flactrim: flactrim.cpp defines.hpp BitIStream.cpp BitIStream.hpp BitOStream.cpp BitOStream.hpp
-		$(CC) $(CFLAGS) flactrim.cpp BitIStream.cpp BitOStream.cpp -o flactrim
+		$(CC) $(CFLAGS) flactrim.cpp BitIStream.cpp BitOStream.cpp -o flactrim -std=c++0x
 		
